[package]
name = "paq"
version = "0.3.0"
authors = ["programingjd"]
edition = "2021"

[lib]
crate-type = ["cdylib","rlib"]

[dependencies.wasm-bindgen]
version = "0.2"

[dependencies.mashi-core]
version = "0.1"
features=["encoder"]
default-features=false

[profile.release]
opt-level = "s"
lto = true
