[package]
name = "wasm_paq"
version = "0.3.0"
edition = "2024"
authors = ["programingjd"]

[lib]
crate-type = ["cdylib","rlib"]

[dependencies.wasm-bindgen]
version = "0.2"

[dev-dependencies.rand]
version = "0.9"

[profile.release]
opt-level = "s"
lto = "fat"
codegen-units = 1

#[profile.release]
#opt-level = "z"
#lto = "thin"
#codegen-units = 1

[profile.custom]
inherits = "release"
opt-level = "z"
lto = "thin"
codegen-units = 1
#panic = "abort"
